--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>GA_Test(No addressables)</title>
+    <title>GA_Test</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -25,14 +25,14 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/21-8(2).loader.js";
+      const loaderUrl = buildUrl + "/New folder (2).loader.js";
       const config = {
-        dataUrl: buildUrl + "/21-8(2).data",
-        frameworkUrl: buildUrl + "/21-8(2).framework.js",
-        codeUrl: buildUrl + "/21-8(2).wasm",
+        dataUrl: buildUrl + "/New folder (2).data",
+        frameworkUrl: buildUrl + "/New folder (2).framework.js",
+        codeUrl: buildUrl + "/New folder (2).wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "GA_Test(No addressables)",
+        productName: "GA_Test",
         productVersion: "0.1.0",
       };
 
