Addressables Build updated

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/New folder (2).loader.js";
+      const loaderUrl = buildUrl + "/NewEnvironment(withaddressables).loader.js";
       const config = {
-        dataUrl: buildUrl + "/New folder (2).data",
-        frameworkUrl: buildUrl + "/New folder (2).framework.js",
-        codeUrl: buildUrl + "/New folder (2).wasm",
+        dataUrl: buildUrl + "/NewEnvironment(withaddressables).data",
+        frameworkUrl: buildUrl + "/NewEnvironment(withaddressables).framework.js",
+        codeUrl: buildUrl + "/NewEnvironment(withaddressables).wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GA_Test",
